--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "ethers": "^5.0.17",
+    "follow-redirects": "^1.13.0",
     "puppeteer": "^5.2.1",
     "redis": "^3.0.2",
     "replace-string": "^3.1.0",
