--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "follow-redirects": "^1.13.0",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "@sushiswap/sushi-data": "0.0.9",
+    "@uniswap/sdk": "^3.0.3",
+    "ethers": "^5.0.17",
+    "puppeteer": "^5.2.1",
+    "replace-string": "^3.1.0",
+    "synthetix-data": "^2.1.33"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
